--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -5,14 +5,18 @@
         <link rel="stylesheet" href="./travel_recommendation.css">
     </head>
     <body >
-        <nav><h1>TravelBloom</h1>
+        <nav><a href="./travel_recommendation.html"><img src="./logo.png"></a>
             <ul>
                 <li><a href="./travel_recommendation.html" id="home">Home </a></li>
                 <li><a href="./travel_about.html" id="about">About Us </a></li>
                 <li><a href="./travel_contact.html" id="contact">Contact Us </a></li>
-                <li><input type="text" id="searchInput" placeholder="Enter a destination or keyword"></li>
-                <li><button id="searchBtn" class="btnInside">Search</button></li>
-                <li><button id="clearBtn" class="btnInside">Clear</button></li>
+                <li>
+                    <div class="content">
+                        <input type="text" id="searchInput" placeholder="Enter a destination or keyword">
+                        <button id="searchBtn" class="btnInside">Search</button>
+                        <button id="clearBtn" class="btnInside">Clear</button>
+                    </div>
+                </li>
             </ul>
         </nav>
     </body>
