add homepage content

--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -11,7 +11,7 @@
                 <li><a href="./travel_about.html" id="about">About Us </a></li>
                 <li><a href="./travel_contact.html" id="contact">Contact Us </a></li>
                 <li>
-                    <div class="content">
+                    <div class="navInput">
                         <input type="text" id="searchInput" placeholder="Enter a destination or keyword">
                         <button id="searchBtn" class="btnInside">Search</button>
                         <button id="clearBtn" class="btnInside">Clear</button>
@@ -19,5 +19,16 @@
                 </li>
             </ul>
         </nav>
+        <div id="slogan" class="content">
+            <h1>YOUR JOURNEY,</h1>
+            <h1>YOUR WAY.</h1>
+        </div>
+        <div id="intro" class="content">
+            <p>Luxury Trails empowers you to explore the world on your terms.</p>
+            <p>Whether you crave the thrill of solo adventure, the comfort of a guided tour, or the luxury of a bespoke itinerary, we'll help you craft the perfect trip.</p>
+            <p>Start your journey today!</p>
+        </div>
+        <button id="bookNow">Book Now</button>
+        <script src="travel_recommendation.js"></script>
     </body>
 </html>
