--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TravelBloom</title>
+        <title>Luxury Trails</title>
         <link rel="stylesheet" href="./travel_recommendation.css">
     </head>
     <body >
