--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -19,19 +19,21 @@
                 </li>
             </ul>
         </nav>
-        <div id="leftSide">
-            <div id="slogan" class="content">
-                <h1>YOUR JOURNEY,</h1>
-                <h1>YOUR WAY.</h1>
+        <div style="width: 100%">
+            <div id="leftSide">
+                <div id="slogan" class="content">
+                    <h1>YOUR JOURNEY,</h1>
+                    <h1>YOUR WAY.</h1>
+                </div>
+                <div id="intro" class="content">
+                    <p>Luxury Trails empowers you to explore the world on your terms.</p>
+                    <p>Whether you crave the thrill of solo adventure, the comfort of a guided tour, or the luxury of a bespoke itinerary, we'll help you craft the perfect trip.</p>
+                    <p><h3>Start your journey today!</h3></p>
+                </div>
+                <button id="bookNow">Book Now</button>
             </div>
-            <div id="intro" class="content">
-                <p>Luxury Trails empowers you to explore the world on your terms.</p>
-                <p>Whether you crave the thrill of solo adventure, the comfort of a guided tour, or the luxury of a bespoke itinerary, we'll help you craft the perfect trip.</p>
-                <p>Start your journey today!</p>
+            <div id="rightSide">
             </div>
-            <button id="bookNow">Book Now</button>
-        </div>
-        <div id="rightSide">
         </div>
         <script src="travel_recommendation.js"></script>
     </body>
